# cvdev

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
modules/: FindImGui.cmake  FindMagnumIntegration.cmake
src/: Application.cpp  Application.h  CMakeLists.txt  RoboCockpit.cpp  RoboCockpit.h
src/containers/: BinaryTree.h
src/objects/: Axis.cpp  Axis.h  Camera.cpp  Camera.h  Grid.cpp  Grid.h
src/panels/: 3DView.cpp  3DView.h  ImagePreview.cpp  ImagePreview.h
src/structures/: BinaryTree.h
src/test/: BinaryTreeTest.cpp  CMakeLists.txt  HelloWorldTest.cpp  ViewportTest.cpp  ViewportTreeTest.cpp
src/traits/: traits.h
src/viewports/: 3DViewport.cpp  3DViewport.h  AbstractViewport.cpp  AbstractViewport.h  ViewportManager.cpp  ViewportManager.h  ViewportTree.cpp  ViewportTree.h  VisibleViewport.h
submodules/: CMakeLists.txt
